# Yggdrasill

./: .editorconfig  .gitattributes  .gitignore  README.md  ^  _patch_assigndate.py  academy.db  netlify.toml  pubspec.yaml  temp_remove.ps1  tmp_ime_fix.ps1  tmp_ime_fix.py  tmp_patch.cjs
.cursor/backup-pair-anchor-2pass-20260524-144040/: problem_bank_api.js  problem_bank_export_models.dart  problem_bank_export_worker.js  template.js  working-tree.patch
.cursor/plans/: 스탯탭_출석점수_1단계_e3744006.plan.md
.cursor/rules/: design-system.mdc  pb-extract-regression.mdc  problem-analytics.mdc
android/app/: build.gradle.kts
apps/survey-web/: .gitignore  README.md  admin.html  env.local.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/yggdrasill/: .gitignore  HOMEWORK_UNIT_STATS_NEW_ONLY_ROLLOUT.md  RESOURCE_TEXTBOOK_FOLDER_MANAGEMENT.md  naesin_print_rollout_validation.md  pubspec.yaml
apps/yggdrasill_design_preview/: README.md  pubspec.yaml
apps/yggdrasill_kiosk/: .gitignore  README.md  env.local.example.json  pubspec.yaml
apps/yggdrasill_kiosk_web/: README.md  app.js  appinfo.json  config.example.js  config.js  index.html  styles.css
apps/yggdrasill_manager/: README.md  env.example  env.local.json  package-lock.json  pubspec.yaml  run.ps1  tmp_adjust_rounds_parts.js
apps/yggdrasill_student/: README.md  TEXTBOOK_GRADING_ROADMAP.md  pubspec.yaml
docs/: apple_developer_onboarding.md  apple_watch_attendance_design.md  attendance_alimtalk_setup.md  design-system.md  homework_test_grading_attempt_storage.md  lightsail_alimtalk_worker_setup.md  makeup_alimtalk_setup.md  problem-bank-classification-v1.md  problem_bank_quality_gate.md  textbook_pdf_migration_runbook.md
docs/adr/: 2025-10-11-mqtt-transport.md
docs/architecture/: problem-analytics.md
docs/assessment/: README.md  TODO.md  data_sources.md  glossary.md  model.md  philosophy.md  scoring.md  scoring_snapshot_policy.md
docs/e2e/: mqtt_smoke.md
docs/surveys/: questions_2026-01-21T15-15-53-811Z.xlsx  questions_2026-01-21T15-15-53-811Z_rounds.xlsx  questions_2026-01-21T15-15-53-811Z_rounds_parts.xlsx  questions_2026-01-21T15-15-53-811Z_rounds_parts_pairs.xlsx  questions_2026-01-21_pre_survey.xlsx  questions_2026-01-23T02-29-37-248Z.xlsx  questions_2026-01-23T07-06-19-815Z.xlsx  questions_2026-01-23T08-09-59-287Z.xlsx  questions_2026-01-23T08-09-59-287Z_rounds_parts.xlsx  questions_2026-01-23_rounds_merged_pairs.xlsx  questions_2026-01-24T15-33-55-165Z.xlsx  questions_2026-01-24T15-36-43-347Z.xlsx  questions_2026-01-25T03-25-09-445Z.xlsx  questions_2026-01-25T03-25-09-445Z_tagged_pairs.xlsx  questions_2026-01-27T11-52-55-182Z_backup.xlsx  questions_2026-01-27T11-52-55-182Z_rebalanced_rounds.xlsx  questions_2026-01-27T11-52-55-182Z_rebalanced_rounds_labels.xlsx  questions_2026-01-27T11-52-55-182Z_rebalanced_rounds_labels_parts.xlsx  questions_2026-01-27T11-52-55-182Z_rebalanced_rounds_labels_parts_v2.xlsx
firmware/m5stack/: INSTALL_GUIDE.md  README.md  README_LVGL.md  check_100dp_999999_FILL0_wght400_GRAD0_opsz48.c  convert_battery_icons.py  lists_100dp_999999_FILL0_wght400_GRAD0_opsz48.c  partitions_ota.csv  pause_circle_90dp_999999_FILL0_wght400_GRAD0_opsz48.c  platformio.ini  play_arrow_100dp_999999_FILL0_wght400_GRAD0_opsz48.c  stop_100dp_999999_FILL0_wght400_GRAD0_opsz48.c  학생용_M5Stack_사용설명서.md
gateway/: .env  .env.example  README.md  RUNTIME.md  SESSION_RECOVERY_VALIDATION.md  __inspect_q14_q20.mjs  _verify_mock_common_width.mjs  ecosystem.config.cjs  package-lock.json  package.json
gateway/mosquitto/: ecosystem.mqtt.config.cjs  ygg.conf
gateway/scripts/: adhoc_align_marker_html_smoke.mjs  adhoc_align_marker_render_smoke.mjs  adhoc_align_marker_unit.mjs  adhoc_backfill_all_answers.mjs  adhoc_blank_square_sqrt_unit.mjs  adhoc_call_batch_render.mjs  adhoc_cases_display_unit.mjs  adhoc_check_link_1040.mjs  adhoc_check_meta_aligns.mjs  adhoc_hwpx_figure_map_dump.mjs  adhoc_hwpx_image_context_dump.mjs  adhoc_hwpx_inspect_raw.mjs  adhoc_hwpx_linestream_dump.mjs  (+37 more)
lib/: main.dart
linux/: CMakeLists.txt
scripts/: sbq.sh
simulator/lvgl/: CMakeLists.txt  README.md  convert_icons.py  icon_home.c  icon_refresh.c  icon_settings.c  icon_volume_up.c  icon_wifi.c  lv_conf.h  main.c  screensaver.c  screensaver.h  settings_ui.c  settings_ui.h  wifi_ui.c  wifi_ui.h
simulator/lvgl/build-n/: CMakeCache.txt
supabase/: config.toml  student_archives_guide.md
test/: widget_test.dart
tmp_appinstaller_debug/: Yggdrasill.appinstaller  Yggdrasill_fixed.appinstaller
tools/: bin_to_c.py  convert_battery_bin.ps1  mqctl.ps1  setup_and_build.ps1
web/: index.html
windows/: CMakeLists.txt
(+1159 files in other folders)
